--- a/template.yaml
+++ b/template.yaml
@@ -15,36 +15,18 @@ Metadata:
 
 
 Resources:
-  ApiGatewayApi:
-    Type: AWS::Serverless::Api
-    Properties:
-      StageName: dev
-  ApiFunction:
+  IAMUserManager:
     Type: AWS::Serverless::Function
     Properties:
+      CodeUri: flask-app/
+      Handler: app.app
+      Runtime: python3.6
       Events:
-        ApiEvent:
+        HelloWorld:
           Type: Api
           Properties:
-            Ref: ApiGatewayApi
-      Runtime: python3.7
-      Handler: app.app
-      InlineCode: |
-        def handler(event, context):
-            return {'body': 'HELLOWORLD', 'statusCode': 200}
-
-#  IAMUserManager:
-#    Type: AWS::Serverless::Function
-#    Properties:
-#      CodeUri: flask-app/
-#      Handler: app.app
-#      Runtime: python3.6
-#      Events:
-#        HelloWorld:
-#          Type: Api
-#          Properties:
-#            Path: /
-#            Method: get
+            Path: /
+            Method: get
 
 Outputs:
   HelloWorldApi:
