--- a/template.yaml
+++ b/template.yaml
@@ -13,20 +13,40 @@ Metadata:
     Description: Serverless App to manage AWS IAM users
     Author: abhijeetdeshkar
 
-
 Resources:
-  IAMUserManager:
+  ApiGatewayApi:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: prod
+  ApiFunction: # Adds a GET api endpoint at "/" to the ApiGatewayApi via an Api event
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: flask-app/
-      Handler: app.app
-      Runtime: python3.6
       Events:
-        HelloWorld:
+        ApiEvent:
           Type: Api
           Properties:
             Path: /
             Method: get
+            RestApiId:
+              Ref: ApiGatewayApi
+      Runtime: python3.7
+      Handler: index.handler
+      InlineCode: |
+        def handler(event, context):
+            return {'body': 'HELLO WORLD!', 'statusCode': 200}
+#Resources:
+#  IAMUserManager:
+#    Type: AWS::Serverless::Function
+#    Properties:
+#      CodeUri: flask-app/
+#      Handler: app.app
+#      Runtime: python3.6
+#      Events:
+#        HelloWorld:
+#          Type: Api
+#          Properties:
+#            Path: /
+#            Method: get
 
 Outputs:
   HelloWorldApi:
