--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
       - npm install serverless
       - npm install serverless-wsgi serverless-python-requirements
       - "ls -lart node_modules"
-      - sudo node_modules/serverless deploy
+      - /bin/bash node_modules/serverless deploy
 artifacts:
   files:
     - packaged-template.yml
