--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,8 @@ phases:
       - cd flaskapp
       - npm install serverless
       - npm install serverless-wsgi serverless-python-requirements
-      - "ls -lart node_modules"
-      - /bin/bash node_modules/serverless deploy
+      - npm ls -g --depth 0
+#      - /bin/bash node_modules/serverless deploy
 artifacts:
   files:
     - packaged-template.yml
