--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
       - npm install serverless
       - npm install serverless-wsgi serverless-python-requirements
       - npm list -g --depth 0
+      - ls $CODEBUILD_SRC_DIR/flaskapp/node_modules/serverless
 #      - /bin/bash node_modules/serverless deploy
 artifacts:
   files:
