--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,9 +10,9 @@ phases:
 #      - npm install --save-dev serverless
 #      - npm install --save-dev serverless-wsgi serverless-python-requirements
       - npm list -g --depth 0
+      - ls $CODEBUILD_SRC_DIR/flaskapp/node_modules/serverless/*
       - which serverless
-#      - ls $CODEBUILD_SRC_DIR/flaskapp/node_modules/serverless/*
-#      - /bin/bash node_modules/serverless deploy
+      - /bin/bash node_modules/serverless deploy
 artifacts:
   files:
     - packaged-template.yml
