--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,14 +5,19 @@ phases:
       python: 3.7
   build:
     commands:
+      - mkdir -p $CODEBUILD_SRC_DIR/npm-global
+      - npm config set prefix '$CODEBUILD_SRC_DIR/npm-global'
+      - export PATH=$CODEBUILD_SRC_DIR/npm-global/bin:$PATH
+      - source ~/.profile
+      - npm install -g serverless
       - cd flaskapp
-      - npm install
+#      - npm install
 #      - npm install --save-dev serverless
-#      - npm install --save-dev serverless-wsgi serverless-python-requirements
+      - npm install --save-dev serverless-wsgi serverless-python-requirements
       - npm list -g --depth 0
-      - ls $CODEBUILD_SRC_DIR/flaskapp/node_modules/serverless/*
+#      - ls $CODEBUILD_SRC_DIR/flaskapp/node_modules/serverless/*
       - which serverless
-      - /bin/bash node_modules/serverless deploy
+#      - /bin/bash node_modules/serverless deploy
 artifacts:
   files:
     - packaged-template.yml
