--- a/flaskapp/package.json
+++ b/flaskapp/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "serverless": "2.47.0",
+    "serverless": "^2.47.0",
     "serverless-python-requirements": "^5.1.1",
     "serverless-wsgi": "^1.7.8"
   },
