--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,8 +16,9 @@ phases:
       - npm install --save-dev serverless-wsgi serverless-python-requirements --unsafe-perm=true --allow-root
       - npm list -g --depth 0
 #      - ls $CODEBUILD_SRC_DIR/flaskapp/node_modules/serverless/*
-#      - which serverless
+      - which serverless
 #      - /bin/bash node_modules/serverless deploy
+      - serverless deploy
 artifacts:
   files:
     - packaged-template.yml
