--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,8 @@ phases:
 #      - npm config set prefix '$CODEBUILD_SRC_DIR/npm-global'
 #      - export PATH=$CODEBUILD_SRC_DIR/npm-global/bin:$PATH
 #      - source ~/.profile
+      - curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+      - python get-pip.py
       - npm install -g serverless --unsafe-perm=true --allow-root
       - cd flaskapp
 #      - npm install
