--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,6 +20,7 @@ phases:
 #      - ls $CODEBUILD_SRC_DIR/flaskapp/node_modules/serverless/*
       - which serverless
 #      - /bin/bash node_modules/serverless deploy #
+      - export SLS_DEBUG=true
       - serverless deploy
 artifacts:
   files:
