--- a/flaskapp/serverless.yml
+++ b/flaskapp/serverless.yml
@@ -28,6 +28,8 @@ provider:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
+#        - apigateway:*
+#        - lambda:*
         - iam:*
       Resource:
         - { "Fn::GetAtt": [ "UsersDynamoDBTable", "Arn" ] }
